--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Countdown to Quit</title>
+<title>Countdown to Quit:</title>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
@@ -19,7 +19,7 @@
         display: flex;
         align-items: center;
         gap: 40px;
-        padding: 5px 30px;
+        padding: 0px 30px;
         background-color: #B7CF35;
         color: #000000;
         flex-wrap: wrap;
