--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: auto;
+        height: 100px;
     }
     .countdown-container {
         display: flex;
