--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 80px;
+        height: auto;
     }
+    html {
+    margin: 0;
+    padding: 0;
+}
     .countdown-container {
         display: flex;
         align-items: center;
