--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             <div class="number" id="minutes">0</div>
             <div class="label">Minutes</div>
         </div>
+        <div class="time-unit">
+            <div class="number" id="seconds">0</div>
+            <div class="label">Seconds</div>
+        </div>
     </div>
 </div>
 
@@ -99,10 +103,13 @@ function updateCountdown() {
     const days = Math.floor(diff / (1000 * 60 * 60 * 24));
     const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
     const minutes = Math.floor((diff / (1000 * 60)) % 60);
+    const seconds = Math.floor((diff / 1000) % 60);
+
 
     document.getElementById("days").textContent = days;
     document.getElementById("hours").textContent = hours;
     document.getElementById("minutes").textContent = minutes;
+    document.getElementById("seconds").textContent = seconds;
 }
 
 setInterval(updateCountdown, 1000);
